<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<EditTextPreference
		android:name="user"
		android:title="@string/user"
		android:summary="@string/user_summary"
		android:defaultValue="@string/user_default"
		android:key="user" />
	<EditTextPreference
		android:name="password"
		android:title="@string/password"
		android:summary="@string/password_summary"
		android:defaultValue="@string/password_default"
		android:key="password" />
	<EditTextPreference
		android:name="resource"
		android:title="@string/resource"
		android:summary="@string/resource_summary"
		android:defaultValue="@string/resource_default"
		android:key="resource" />
	<EditTextPreference
		android:name="domain"
		android:title="@string/domain"
		android:summary="@string/domain_summary"
		android:defaultValue="@string/domain_default"
		android:key="domain" />
	<EditTextPreference
		android:name="server"
		android:title="@string/server"
		android:summary="@string/server_summary"
		android:defaultValue="@string/server_default"
		android:key="server" />
	<EditTextPreference
		android:key="port"
		android:title="@string/port"
		android:summary="@string/port_summary"
		android:defaultValue="@string/port_default"
		android:inputType="phone"
		android:digits="0123456789"/>
	<CheckBoxPreference
		android:key="bootup"
		android:title="@string/bootup"
		android:summary="@string/bootup_summary"
		android:defaultValue="false"/>
</PreferenceScreen>
